--- a/corridor.html
+++ b/corridor.html
@@ -24,6 +24,7 @@
             #about:hover{background-color: ghostwhite; color: royalblue}
             #bookmarks:hover{background-color: #0d0542; color: #ffb135; border-color: #ffb135;}
             #blender:hover{background-color: royalblue; color: ghostwhite;}
+            #doodles:hover{background-color: white; color: black; border-color: grey}
             #buttons:hover{background-color: lightsteelblue; color: royalblue;}
             #basement:hover{background-color: aliceblue; color: darkslategray}
             #sitelog:hover{color: orange; border-color: sienna;}
@@ -65,6 +66,7 @@
             <h2 style="text-align: right;"><a id='about' href="about">about →</a></h2>
             <h2 style="text-align: left;"><a id='bookmarks' href="bookmarks">← bookmarks</a></h2>
             <h2 style="text-align: right;"><a id='blender' href="blender">blender →</a></h2>
+            <h2 style="text-align: left;"><a id='doodles' href="doodles">← doodles</a></h2>
             <h2 style="text-align: left;"><a id='buttons' href="buttons">← buttons</a></h2>
             <h2 style="text-align: right;"><a id='basement' href="basement">basement →</a></h2>
             <h2 style="text-align: center;"><a id='sitelog' href="sitelog">sitelog →</a></h2>
