added dates to text archive

--- a/basement/misc/cabinet/index.html
+++ b/basement/misc/cabinet/index.html
@@ -387,7 +387,7 @@
         <details id="text">
             <summary>text archive</summary>
             <p>.txt files i found worth putting here. mostly anxiety.</p>
-            <details id="corridor_note"><summary>corridor note</summary>
+            <details id="corridor_note"><summary>corridor note (1/5/23)</summary>
                 <p>oh hey! welcome back to my website. it's going through some changes. 
                     again. for the 8th time, by my counts.<br>it's just that i keep coming across
                     new things and my feelings change. as does everything tbh<br>so. i'm redoing and
@@ -398,7 +398,7 @@
                     expect more stuff here in the future!<br><br>-- cvni81
                 </p>
                 </details>
-            <details id="fonts"><summary>fonts to add eventually to the site eventually</summary>
+            <details id="fonts"><summary>fonts to add eventually to the site eventually (18/3/23)</summary>
                 <p>gloock
                 <br>tilt warp
                 <br>bree serif
@@ -406,7 +406,7 @@
                 <br>staatliches
                 <br>anybody</p>
             </details>
-            <details id="concreto"><summary>concreto</summary>
+            <details id="concreto"><summary>concreto (25/2/22)</summary>
             <pre style="font-size: 1.0625rem;">
 me   memo   memória   ria<br>
                       ia<br>
@@ -419,7 +419,7 @@ i  i  i  i  i  i  is<br>
 s  ss  sss  ss  s<br>
 e—         não.</pre>
             </details>
-            <details id="i"><summary>{i} note to webmaster and reader</summary>
+            <details id="i"><summary>{i} note to webmaster and reader (11/9/22)</summary>
                 <ul><li>Note to webmaster:</li></ul>
                 <p>This website can't include anything that can cause any type of problem in the future, 
                 to you or anyone so, take proper caution, however not unnecessarily extreme caution. 
@@ -439,7 +439,7 @@ e—         não.</pre>
                 quickest).
                 Also, please do not take any content of this page personally.</p>
             </details>
-            <details id="nothing"><summary>nothing</summary>
+            <details id="nothing"><summary>nothing (24/2/23)</summary>
             <p>
                 hello there fellow internet enjoyer.
                 <br>nice to have you here. very nice in fact.
