--- a/basement/misc/cabinet/pages/mante.html
+++ b/basement/misc/cabinet/pages/mante.html
@@ -83,10 +83,10 @@
                 (name changer) leaderboard:</p>
                 <ul>
                     <li><b>kulupu ko:</b> 141 changes</li>
-                    <li><b>the motan:</b> 81 changes</li>
+                    <li><b>the motan:</b> 82 changes</li>
                     <li><b>The Planet Mercury:</b> 55 changes</li>
-                    <li><b>tabby:</b> 40 changes</li>
-                    <li><b>jan Seli:</b> 25 changes</li>
+                    <li><b>tabby:</b> 41 changes</li>
+                    <li><b>jan Seli:</b> 26 changes</li>
                     <li><b>kala Asi:</b> 19 changes</li>
                     <li><b>mu Temi:</b> 6 changes</li>
                     <li><b>mute ante:</b> 2 changes</li>
@@ -94,6 +94,9 @@
                 <p style="margin-bottom: 5px">mute ante li pali e lipu ni</p>
         </details>
         <h2>2024</h2><ul id="name_list_2024">
+            <li>6/7:<b> ma motan pi suno motan </b><span class="name">the motan</span></li><br>
+            <li>1/7:<b> the other place, for different conversations </b><span class="name">jan Seli</span></li><br>
+            <li>30/6:<b> land of the ante, home of the ante </b><span class="name">tabby</span></li><br>
             <li>28/6:<b> ㄇㄚ ㄢㄉㄝ ㄅㄧ ㄧㄛ ㄢㄉㄝ </b><span class="name">the motan</span></li><br>
             <li>28/5:<b> ipi sin </b><span class="name">jan Seli</span></li><br>
             <li>26/6:<b>  ̀̀ </b><span class="name">the motan</span></li><br>
