added fonts door to the basement!

--- a/basement/fonts/monospaced/index.html
+++ b/basement/fonts/monospaced/index.html
@@ -17,7 +17,7 @@
             terminal emulators, as well as just. making something look technological.
         </p><br>
 
-            <details class="subcategory" id="basically_all"><summary><h2>basically all of them</h2></summary>
+            <details class="subcategory" id="basically_all"><summary><h2>basically all of them (8)</h2></summary>
                 <p>Some of these fonts are great for coding and terminal use! Others really aren't, mostly just
                     for display usage and pretty or interesting looking text. Sorted alphabetically.
                 </p>
