--- a/basement/index.html
+++ b/basement/index.html
@@ -19,6 +19,7 @@
 
             #back:hover{background-color: black; color: white}
             #misc:hover{background-color: #040404; color: #15c405}
+            #fonts:hover{background-color: black; color: deeppink}
 
             nav{margin: 24px 0}
             nav a{text-decoration: none; display: inline-block;
@@ -27,11 +28,12 @@
         </style></head>
     <body><main>
         <p>You walk down the stairs into the basement, lit up by cool white lights.
-            Hospital vibes. Once again, you see doors but you can only open one of them,
+            Hospital vibes. Once again you see doors, two of them, one of them
             with the words "staff only" scribbled over with sharpie.
         </p>
         <nav>
             <h2 style="text-align: left;"><a id='back' href="../corridor">↖ back to corridor</a></h2>
+            <h2 style="text-align: right;"><a id='fonts' href="fonts">fonts →</a></h2>
             <h2 style="text-align: right;"><a id='misc' href="misc">misc →</a></h2>
         </nav>
     </main>
