--- a/basement/fonts/index.html
+++ b/basement/fonts/index.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8" name="viewport" content="width=device-width, initial-scale=1">
         <link href="../../style.css" rel="stylesheet" type="text/css" media="all">
         <link href="style.css" rel="stylesheet" type="text/css" media="all">
+        <link rel="icon" type="image/x-icon" href="../../assets/fonts.png">
         <title>fonts</title><style>
             details, summary{--color: mediumseagreen}
 
