added 4 more mono fonts

--- a/basement/fonts/index.html
+++ b/basement/fonts/index.html
@@ -51,7 +51,10 @@
             terms, you can use it freely, modify and redistribute it but sometimes you need to change the name, 
             and be credited for your work. please read the 
             <a href="https://openfontlicense.org/open-font-license-official-text/">full license</a> for the actual words.)
-            But some fonts are under different licenses, and i'll reference their respective licenses.<br>
+            But some fonts are under different licenses, and i'll reference their respective licenses.<b>
+                If i got a font's credit wrong, or the wrong license, or got a translation wrong (which is likely),
+                <a href="mailto:cvni1981@gmail.com">please tell me!!!</a>
+            </b><br>
             
             Some are unique, some are bland, some are overused, some are clones. Download and use them today!
             or don't im not your mom<br>
