--- a/basement/fonts/monospaced/index.html
+++ b/basement/fonts/monospaced/index.html
@@ -74,7 +74,7 @@
                     (<a href="https://openfontlicense.org/">OFL</a>)</h3>
                     <p>by Alan Dague-Greene</p><br>
 
-                    <p>The Courier we all now and love (?) was made by Howard Kettler for IBM in the 50's 
+                    <p>The Courier we all know and love (?) was made by Howard Kettler for IBM in the 50's 
                         (they didn't trademark the name so it's public domain by now!), and it's in a ton
                         of computers. It's also basically the standard font for making screenplay scripts!
                         This though, Courier Prime, is a more refined version that is much easier on the eyes,
