added 6 mono fonts! slowly but surely

--- a/basement/fonts/monospaced/index.html
+++ b/basement/fonts/monospaced/index.html
@@ -18,7 +18,7 @@
             terminal emulators, as well as just. making something look technological.
         </p><br>
 
-            <details class="subcategory" id="basically_all"><summary><h2>basically all of them (12)</h2></summary>
+            <details class="subcategory" id="basically_all"><summary><h2>basically all of them (18)</h2></summary>
                 <p>Some of these fonts are great for coding and terminal use! Others really aren't, mostly just
                     for display usage and pretty or interesting looking text. Sorted alphabetically.
                 </p>
@@ -188,6 +188,87 @@
                         an oddly circular hook on the a. There is also a variable version available!
                     </p>
                     <img src="geist.png">
+                </div>
+
+                <div class="font"><h3>
+                    <a href="https://fonts.google.com/specimen/Inconsolata">Inconsolata</a> 
+                    (<a href="https://openfontlicense.org/">OFL</a>)</h3>
+                    <p>by <a href="https://levien.com/">Raph Levien</a></p><br>
+
+                    <p>This is the font you saw outside in the corridor! It has some spurs in some terminals that
+                        kinda look... gross to me fsr, like on the ends of the s and t. Otherwise, it's very easy on
+                        the eyes, and it's variable on weight <b>and width</b>! Very very versatile beyond code.
+                    </p>
+                    <img src="inconsolata.png">
+                </div>
+
+                <div class="font"><h3>
+                    <a href="https://typeof.net/Iosevka/">Iosevka</a> 
+                    (<a href="https://openfontlicense.org/">OFL</a>)</h3>
+                    <p>by <a href="https://typeof.net/">Renzhi Li aka be5invis</a></p><br>
+
+                    <p>This is actually the font <i>i</i> personally use for coding and my terminal, a friend introduced
+                        me to it and i've fallen in love. It's very geometrical, almost like <a href="https://en.wikipedia.org/wiki/DIN_1451">DIN 1451</a>,
+                        which can be bad for some ppl, with very uniform lettershapes, but not really for me. It even has
+                        slab serif, and proportional versions, with lots of weights and 2 widths. Or you can even 
+                        <a href="https://typeof.net/Iosevka/customizer"><b>make your own version</b></a> with different
+                        character variants and lots of weight and width choices!
+                    </p>
+                    <img src="iosevka.png">
+                </div>
+
+                <div class="font"><h3>
+                    <a href="https://www.jetbrains.com/lp/mono/">JetBrains Mono</a> 
+                    (<a href="https://openfontlicense.org/">OFL</a>)</h3>
+                    <p>by Philipp Nurullin and others of <a href="https://www.jetbrains.com/">JetBrains</a></p><br>
+
+                    <p>This font is actually quite similar to Iosevka, but with slightly less rounded letter shapes, 
+                        higher x height (which kinda makes it harder to read tbh) and less customization. It was made for
+                        JetBrains, who make code editors specific for certain programming languages which. cool i suppose.
+                        Other than that, it's a very pleasant coding and display font, with very nice curve joinings
+                        in letters like "n" and "a". Also the u is legless by default, but you can fix that with
+                        a style set.
+                    </p>
+                    <img src="jetbrains.png">
+                </div>
+
+                <div class="font"><h3>
+                    <a href="https://www.fontsquirrel.com/fonts/liberation-mono">Liberation Mono</a> 
+                    (<a href="https://openfontlicense.org/">OFL</a>)</h3>
+                    <p>by <a href="https://mattesontypographics.com/">Steve Matteson</a></p><br>
+
+                    <p>This is the default mono font (i think) in most Linux distributions, which also looks like
+                        <a href="https://en.wikipedia.org/wiki/Liberation_fonts">Liberation Sans</a>, which has
+                        a kinda early grotesk feel to it. Though, with it being a default, it looks kinda boring,
+                        but since its not a default on most OSes, i thought to put it here anyways.
+                    </p>
+                    <img src="liberation.png">
+                </div>
+
+                <div class="font"><h3>
+                    <a href="https://lyonstype4.wixsite.com/lyonstype-beta/fonts">LT Superior Mono</a> 
+                    (<a href="https://openfontlicense.org/">OFL</a>)</h3>
+                    <p>by <a href="https://lyonstype4.wixsite.com/lyonstype-beta">Lyonstype</a></p><br>
+
+                    <p>This is a counterpart to LT Superior, which is between a grotesk and a geometric sans serif.
+                        This here mono version is very much more geometric than grotesk, with a bunch of circular
+                        shapes and pleasant capital letters and angled terminal edges. Very much looks like a typewriter
+                        font, probably not very good for coding but definitely nice for display purposes.
+                    </p>
+                    <img src="ltsuperior.png">
+                </div>
+
+                <div class="font"><h3>
+                    <a href="https://fonts.google.com/specimen/Martian+Mono">Martian Mono</a> 
+                    (<a href="https://openfontlicense.org/">OFL</a>)</h3>
+                    <p>by Roman Shamin of <a href="https://evilmartians.com/">Evil Martians</a></p><br>
+
+                    <p>This one is kinda similar in feel to Azeret Mono, with the extended a hook, although
+                        this is variable in both width and weight. The flat ended ink traps also make this font
+                        look quite "modern" in a way i don't really like, but not that noticeable compared to
+                        the rest of this font's characteristics.
+                    </p>
+                    <img src="martian.png">
                 </div>
             
             </div><p>(more fonts soon)</p>
