added images to pages

--- a/404.html
+++ b/404.html
@@ -25,6 +25,7 @@
         </style></head>
     <body><main>
         <p>You entered a door that doesn't exist. somehow.</p><p><a href="/corridor">↙ back to corridor</a></p>
+        <img src="/assets/corridors.png" alt="the corridors" style="margin: 2rem 0 0; max-width: 100%; width: auto">
     </main>
     </body>
 </html>
