--- a/basement/fonts/index.html
+++ b/basement/fonts/index.html
@@ -85,6 +85,7 @@
                 lots of language choices (although most are just Noto fonts), as well as icons!
             </p>
         </details>
+        <img src="e.png" alt="wide e from DIN Breitschrift drawn with ruler and compass" style="margin: 5rem 0 0; max-width: 100%; width: auto">
     </main>
     </body>
 </html>
