--- a/basement/misc/cabinet/index.html
+++ b/basement/misc/cabinet/index.html
@@ -499,6 +499,7 @@ e—         não.</pre>
             </p>
             <a role="navigation" href="#nothing" class="top">↑ top of text</a></details>
     </details>
+    <img src="cabinet.png" alt="filing cabinet" style="margin: 5rem 0 0 auto ; max-width: 100%; width: auto">
     </main>
     </body>
 </html>
