--- a/basement/misc/journal.html
+++ b/basement/misc/journal.html
@@ -343,6 +343,7 @@
         <br>I guess when i make some new text in toki pona or blender render or button or something that <b>fits</b> the style of upstairs, i'll put it there.
         <br>Also i think i have to make a button, i know this site already has a bunch of buttons, but none of them <b>works</b> as a button.
     </p></div>
+    <img src="notebook.png" alt="notebook on an inclined writing desk" style="margin: 5rem 0 0 auto ; max-width: 100%; width: auto">
     </main>
     </body>
 </html>
