--- a/basement/misc/wall.html
+++ b/basement/misc/wall.html
@@ -70,6 +70,7 @@
             <div>Thinking optional.</div>
             <div>We're feeling pretty loopy today huh?</div>
         </div>
+        <img src="wall.png" alt="sticky notes on a wall" style="margin: 5rem 0 0 auto ; max-width: 100%; width: auto">
     </main>
     </body>
 </html>
