--- a/buttons/index.html
+++ b/buttons/index.html
@@ -94,6 +94,7 @@
             <script type="text/javascript" src="https://the-blob-system.neocities.org/mante_webring/onionring-variables.js"></script>
             <script type="text/javascript" src="https://the-blob-system.neocities.org/mante_webring/onionring-widget.js"></script>
             </div>
+        <img src="button.png" alt="cursor clicking on an 88x31 button" style="margin: 0 ; max-width: 100%; width: auto">
     </main>
     </body>
 </html>
