--- a/doodles/index.html
+++ b/doodles/index.html
@@ -9,7 +9,7 @@
             --color: gray;}
 
         #notebooks a{width: fit-content; display: inline;
-        font-size: 1.5rem; padding: 6px 14px 8px; margin: 0 12px;
+        font-size: 1.5rem; padding: 6px 14px 8px; margin: 12px;
             border: solid 1px var(--color); transition: all 1s cubic-bezier(0,1,0,1);
             display: inline-block; text-decoration: none;
         font-weight:bold; font-style: italic;}
@@ -38,5 +38,6 @@
         <nav id="notebooks">
             <a href="14" id="_14">14 {70}</a><a href="15" id="_15">15 {33}</a><a href="16" id="_16">16 {32}</a><a href="ibispaint" id="ibispaint">ibisPaint {8}</a>
         </nav>
+        <img src="floating.png" alt="floating door, seat and bookshelf" style="margin: 5rem 0 0 auto ; max-width: 100%; width: auto">
         </main></body>
 </html>
