--- a/bookmarks.html
+++ b/bookmarks.html
@@ -68,6 +68,7 @@
         <h2><a href="https://raindrop.io/cvni1981/vntla-misc-22520747">VNTLA: Misc</a></h2><p>
             Other videos i wanted saved related to other stuff, including memes.
         </p>
+        <img src="assets/bookshelf.png" alt="a bookshelf" style="margin: 5rem 0 0; max-width: 100%; width: auto">
     </main>
     </body>
 </html>
