--- a/404.html
+++ b/404.html
@@ -10,7 +10,7 @@
             body{background-color: gray; color: black;
                 font-family: 'Inconsolata'; margin: 0;}
             main{margin: auto 24px auto max(min(48px, calc((100vw - 30rem) / 2)), 24px); padding-top: 24px; max-width: 30rem}
-            p{margin: 0}
+            p{margin: 0 0 12px}
             ::selection{background-color: white; color: black}
             a{color: black; transition: all .5s cubic-bezier(0,1,0,1); text-decoration: underline;}
             a:hover{background-color: orangered; text-decoration: orangered}
