HOW HAVE I NOT NOTICED THIS YET

--- a/doodles/index.html
+++ b/doodles/index.html
@@ -27,7 +27,7 @@
         color: white;}
         </style></head>
     <body><header>
-        <h1>buttons</h1>
+        <h1>doodles</h1>
         <nav class="top"><a href="../corridor">go back</a></nav></header>
     <main>
         <p>You step into a void. You can swim around and see a seat right beside
