--- a/buttons/index.html
+++ b/buttons/index.html
@@ -80,7 +80,7 @@
             <a href="https://jmibo.neocities.org/" class="button" ><img src="jmibo.png" alt="jmibo"></a> 
             <a href="https://kpwu.observer/" class="button"><img id="button_self" src="kpwu_button.png" alt="kpwu"></a></div>
         <h2>other cool places</h2><div class="buttons">
-            <a href="https://zenmai.neocities.org/" class="button" style="height:40px"><img src="zenmai.png" alt="zenmai"></a>
+            <a href="https://zenmaistudio.com/" class="button" style="height:40px"><img src="zenmai.png" alt="zenmai"></a>
             <a href="https://worldendling.neocities.org/" class="button"><img width="88" height="31" src="worldendling.gif" alt="worldendling"></a>
             <a href="https://moondvsted.neocities.org/" class="button"><img src="moondvsted.gif" alt="moondvsted"></a>
             <a href="https://telepoet.neocities.org/" class="button"><img src="telepoet8831.gif" alt="TELEPOET"></a> 
