added 4 mono fonts

--- a/basement/fonts/monospaced/index.html
+++ b/basement/fonts/monospaced/index.html
@@ -18,7 +18,7 @@
             terminal emulators, as well as just. making something look technological.
         </p><br>
 
-            <details class="subcategory" id="basically_all"><summary><h2>basically all of them (18)</h2></summary>
+            <details class="subcategory" id="basically_all"><summary><h2>basically all of them (22)</h2></summary>
                 <p>Some of these fonts are great for coding and terminal use! Others really aren't, mostly just
                     for display usage and pretty or interesting looking text. Sorted alphabetically.
                 </p>
@@ -269,6 +269,61 @@
                         the rest of this font's characteristics.
                     </p>
                     <img src="martian.png">
+                </div>
+
+                <div class="font"><h3>
+                    <a href="https://www.dafont.com/monofur.font">monofur</a> 
+                    (Freeware)</h3>
+                    <p>by Tobias Benjamin Köhler</p><br>
+
+                    <p>This one i've actually found because a youtuber (<a href="https://www.youtube.com/@RGMechEx">Retro Game Mechanics Explained</a>) used it in several videos to show assembly language,
+                        and it looks surprisingly good! It's actually a mono version of <a href="https://www.dafont.com/eurofurence.font">Eurofurence</a> (which has more weights and also is the name of a
+                        furry convention!), it has very distinct shapes and old style numbers, and looks kind of
+                        like machine engraved letters with its roundness.
+                    </p>
+                    <img src="monofur.png">
+                </div>
+
+                <div class="font"><h3>
+                    <a href="https://www.dafont.com/monommm-5.font">Mono MMM 5</a> 
+                    (Freeware)</h3>
+                    <p>by Marcelo Magalhães Macedo</p><br>
+
+                    <p>This one i've found searching for mono fonts like monofur, with this being certainly
+                        based on a simple grid with some round edges and a bit too small i and j dots.
+                        It almost feels like the Minecraft font, it's a very geometric font that would
+                        be interesting to use for display.
+                    </p>
+                    <img src="monommm5.png">
+                </div>
+
+                <div class="font"><h3>
+                    <a href="https://fonts.google.com/specimen/Overpass+Mono">Overpass Mono</a> 
+                    (<a href="https://openfontlicense.org/">OFL</a>)</h3>
+                    <p>by Delve Withrington, Dave Bailey and Thomas Jockin of <a href="https://delvefonts.com">Delve Fonts</a></p><br>
+
+                    <p>This one is the mono version of Overpass, which itself is an interpretation of
+                        <a href="https://www.trafficsign.us/signtypeface.html">Highway Gothic</a>, the official
+                        typeface used in USA traffic signs, but with digital displays in mind. This mono
+                        has the slanted terminals of Overpass, with changes to make it monospaced; it's
+                        a bit too wide for me to be used for coding, but looks great to just show stuff off!
+                    </p>
+                    <img src="overpass.png">
+                </div>
+
+                <div class="font"><h3>
+                    <a href="https://tobiasjung.name/profont/">ProFont</a> 
+                    (<a href="https://opensource.org/license/mit">MIT</a>)</h3>
+                    <p>by Andrew Welch, Carl Osterwald, Stephen C. Gilardi and <a href="https://tobiasjung.name/">Tobias Jung</a></p><br>
+
+                    <p>This is probably one of the Original programming fonts, made probably some time in
+                        the 90s for the Mac, and later for Windows and Linux formats, first just as bitmaps
+                        (pixel perfect letters at specific sizes) and later with outline versions (can be displayed
+                        at any size). It is meant to be a very readable font for programming, but to be honest,
+                        other mono fonts nowadays are better. Though it is neat to display at small sizes and
+                        still looks neat and historical.
+                    </p>
+                    <img src="profont.png">
                 </div>
             
             </div><p>(more fonts soon)</p>
