made the font note text shorter

--- a/basement/fonts/monospaced/index.html
+++ b/basement/fonts/monospaced/index.html
@@ -279,7 +279,7 @@
                     <p>This one i've actually found because a youtuber (<a href="https://www.youtube.com/@RGMechEx">Retro Game Mechanics Explained</a>) used it in several videos to show assembly language,
                         and it looks surprisingly good! It's actually a mono version of <a href="https://www.dafont.com/eurofurence.font">Eurofurence</a> (which has more weights and also is the name of a
                         furry convention!), it has very distinct shapes and old style numbers, and looks kind of
-                        like machine engraved letters with its roundness.
+                        like machine-cut letters with its roundness.
                     </p>
                     <img src="monofur.png">
                 </div>
@@ -314,7 +314,7 @@
                 <div class="font"><h3>
                     <a href="https://tobiasjung.name/profont/">ProFont</a> 
                     (<a href="https://opensource.org/license/mit">MIT</a>)</h3>
-                    <p>by Andrew Welch, Carl Osterwald, Stephen C. Gilardi and <a href="https://tobiasjung.name/">Tobias Jung</a></p><br>
+                    <p>by Andrew Welch, Carl Osterwald and Stephen C. Gilardi</p><br>
 
                     <p>This is probably one of the Original programming fonts, made probably some time in
                         the 90s for the Mac, and later for Windows and Linux formats, first just as bitmaps
