--- a/basement/fonts/index.html
+++ b/basement/fonts/index.html
@@ -54,7 +54,7 @@
                 <b>ALWAYS READ THE LICENSE!!!</b> Most here use the Open Font License (in super short terms,
                 you can use it freely, modify and redistribute it but sometimes you need to change the name, 
                 and be credited for your work. please read the 
-                <a href="https://openfontlicense.org/open-font-license-official-text/">full license</a> for the actual words.).
+                <a href="https://openfontlicense.org/open-font-license-official-text/">full license</a> for the actual words).
                 Each font is accompanied by its license if it's not the OFL, with a link. If I gave the wrong
                 license, gave the wrong credit or any other mistake, <a href="mailto:cvni1981@gmail.com">please tell me!!!</a><br>
                 Oh, and the drawers here have a bunch of specimen images, so it may take a while to load
