--- a/basement/fonts/index.html
+++ b/basement/fonts/index.html
@@ -44,13 +44,13 @@
             <p>
                 Hi there! Welcome to... basically my font shrine. I really like typography, how
                 different fonts can look neat, and i've been collecting free fonts for a long time.
-                Mostly because. i have nowhere close to the cost of some paid fonts (for a good reason,
-                making fonts can be <b>painful</b>), but also because everything should be Free
-                as in Freedom yk<br>
+                Mostly because. i have nowhere close to the cost of some paid fonts (they cost money for
+                a good reason, making fonts can be <b>painful</b>, though some great souls have released them
+                for no cost), but also because everything should be Free as in Freedom yk.<br>
                 Here are (most of) the fonts i've found, some silly ones, some kinda crap ones, some
                 hidden gems, as well as other font sites for you to find more. All the fonts you see on 
                 this site btw are free! Here they're accompanied by the people who made the fonts (fonts
-                are made! by people!) as well as why i like (ordon't like) it and some neat history. Also, the license!<br>
+                are made! by people!) as well as why i like (or don't like) it and some neat history. Also, the license!<br>
                 <b>ALWAYS READ THE LICENSE!!!</b> Most here use the Open Font License (in super short terms,
                 you can use it freely, modify and redistribute it but sometimes you need to change the name, 
                 and be credited for your work. please read the 
